--- a/web1/src/app/admin/reminder/reminder.component.html
+++ b/web1/src/app/admin/reminder/reminder.component.html
@@ -288,7 +288,7 @@
                           </div>
                           <!-- Customer Order Pending -->
                        </div>
-                       <div class="row mt-5">
+                       <div class="row mt-4">
                         <!-- Eye Testing -->
                         <div class="col-xl-4 col-lg-6  col-md-12 col-12">
                           <div class="crad bgmE" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
@@ -329,6 +329,216 @@
                         </div>
                         </div>
                         <!-- Eye Testing -->
+                         <!-- Solution exp -->
+                         <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmS" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/eyeSolIcon.png" alt="" srcset="" width="10%"> Solution Expiry</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <mat-tab-group>
+
+                                    <mat-tab label="Customer" >
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td style="background-color: #1e2672; width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        </td>
+                                                        <td>SNo</td>
+                                                        <td>Name</td>
+                                                        <td>Mobile</td>
+                                                        <td>Date</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Supplier">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                </mat-tab-group>
+                          </div>
+                          </div>
+                          <!-- solution exp -->
+                         <!-- lens exp -->
+                         <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmC" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/lensIonc.png" alt="" srcset="" width="10%"> Contact Lens Expiry</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <mat-tab-group>
+
+                                    <mat-tab label="Customer" >
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td style="background-color: #1e2672; width:25%;">
+                                                            <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                            <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                            <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                                        </td>
+                                                        <td>SNo</td>
+                                                        <td>Name</td>
+                                                        <td>Mobile</td>
+                                                        <td>Date</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Supplier">
+                                        <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
+                                            <table class="table  ">
+                                                <thead class="thead-light">
+                                                    <tr>
+                                                        <th>Action</th>
+                                                        <th>SNo</th>
+                                                        <th>Name</th>
+                                                        <th>Mobile</th>
+                                                        <th>Date</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </mat-tab>
+                                </mat-tab-group>
+                          </div>
+                          </div>
+                          <!-- solution exp -->
+                        </div>
+                          <div class="row mt-4">
+                           <!-- Comfort Feedback -->
+                        <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmCo" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/conFortIcon.png" alt="" srcset="" width="10%"> Comfort Feedback</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <div class="col-12 " style="overflow: auto; height: 203px; margin-top: 15px;"> 
+                                <table class="table  ">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Action</th>
+                                            <th>SNo</th>
+                                            <th>Cus_Name</th>
+                                            <th>Mobile</th>
+                                            <th>ExpiryDate</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td style="background-color: #1e2672; width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            </td>
+                                            <td>i</td>
+                                            <td>vinay</td>
+                                            <td>8770303677</td>
+                                            <td>02-02-2020</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                </div>
+                          </div>
+                          </div>
+                          <!-- Comfort Feedback -->
+                           <!-- Service Msg -->
+                        <div class="col-xl-4 col-lg-6  col-md-12 col-12">
+                            <div class="crad bgmSM" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
+                                <div class="row">
+                                    <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/serviceIcon.png" alt="" srcset="" width="10%"> Service Msg</h1></div>
+                                    <div class="col-6 text-center titalName2">
+                                        <button class="itme_button">Yestreday</button>
+                                        <button class="itme_button1 ms-2 me-2">Today</button>
+                                        <button class="itme_button2">Tomorrow</button> 
+                                    </div>
+                                </div>
+                                <div class="col-12 " style="overflow: auto; height: 203px; margin-top: 15px;"> 
+                                <table class="table  ">
+                                    <thead class="thead-light">
+                                        <tr>
+                                            <th>Action</th>
+                                            <th>SNo</th>
+                                            <th>Cus_Name</th>
+                                            <th>Mobile</th>
+                                            <th>ExpiryDate</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td style="background-color: #1e2672; width:25%;">
+                                                <i class="fa-brands fa-whatsapp fa-flip fa-2xl whatsappIocn"></i> 
+                                                <i class="fa-solid fa-comment-sms fa-flip fa-2xl ms-md-3 me-md-3 ms-1 me-1 smsIocn"></i> 
+                                                <i class="fa-regular fa-envelope fa-flip fa-2xl emailIocn"></i>
+                                            </td>
+                                            <td>i</td>
+                                            <td>vinay</td>
+                                            <td>8770303677</td>
+                                            <td>02-02-2020</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                </div>
+                          </div>
+                          </div>
+                          <!-- Service Msg -->
                         </div>
                     </div>
                 </div>
