--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -120,13 +120,17 @@
                                                         <mat-icon class="swap_icon me-1" title="companylogin"
                                                             (click)="companylogin(i)"
                                                             style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
-                                                        <i class="fas fa-info-circle" title="Edit"
-                                                            style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
-                                                            [routerLink]="['/admin/company',data.ID]">
-                                                        </i>
+
+                                                        <mat-icon class="delete_icon ms-1" title="edit"
+                                                        [routerLink]="['/admin/company',data.ID]">edit</mat-icon>
+
                                                         <mat-icon class="delete_icon ms-1" title="Delete"
                                                             (click)="deleteItem(i)">delete_forever</mat-icon>
 
+                                                        <i class="fas fa-info-circle ms-1" title="Detail"
+                                                        style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
+                                                        (click)="openModal(content,data.ID)">
+                                                    </i>
                                                     </td>
                                                     <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{
                                                         dataList.length - i }}</td>
@@ -171,3 +175,73 @@
         </div>
     </div>
 </section>
+
+<!-- Modal -->
+<ng-template #content role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+        <h2 class="modal-title header pt-2" id="exampleModalLabel">Company Detail</h2>
+        <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <form #f="ngForm">
+              <div class="row">
+                 <div class="col-xl-6 col-12" style="overflow: auto; height: 200px;">
+                    <div class="table-responsive">
+                        <table style="width:100%;" id="exportsss"
+                            class="table table-striped table-hover table-sm table-bordered"
+                            style="border: 2px solid #fff !important;">
+                            <thead class="thead-light" style="width:100%;">
+                                <tr>
+                                    <th class="text-left">S.No</th>
+                                    <th class="text-left">CompanyName</th>
+                                    <th class="text-left">ShopName</th>
+                                    <th class="text-left">Retail</th>
+                                    <th class="text-left">Service</th>
+                                    <th class="text-left">WholeSale</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="text-center" *ngFor="let inv of invoiceDetailsList  ; let i = index;">
+                                     <td>{{invoiceDetailsList.length - i}}</td>
+                                     <td>{{inv.CompanyName}}</td>
+                                     <td>{{inv.ShopName}}</td>
+                                     <td>{{inv.Retail}}</td>
+                                     <td>{{inv.Service}}</td>
+                                     <td>{{inv.WholeSale}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                 </div>
+                 <div class="col-xl-6 col-12" style="overflow: auto; height: 200px;">
+                    <div class="table-responsive">
+                        <table style="width:100%; " id="exportsss"
+                            class="table table-striped table-hover table-sm table-bordered"
+                            style="border: 2px solid #fff !important; ">
+                            <thead class="thead-light" style="width:100%;">
+                                <tr>
+                                    <th class="text-left">S.No</th>
+                                    <th class="text-left">CompanyName</th>
+                                    <th class="text-left">ManualBarCode</th>
+                                    <th class="text-left">PreOrderBarCode</th>
+                                    <th class="text-left">StockBarCode</th>
+                                    <th class="text-left">CreatedOn</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="text-center" *ngFor="let inv of barcodeDetailsList  ; let i = index;">
+                                     <td>{{barcodeDetailsList.length - i}}</td>
+                                     <td>{{inv.CompanyName}}</td>
+                                     <td>{{inv.ManualBarCode}}</td>
+                                     <td>{{inv.PreOrderBarCode}}</td>
+                                     <td>{{inv.StockBarCode}}</td>
+                                     <td>{{inv.CreatedOn}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                 </div>
+              </div>
+        </form>
+    </div>
+</ng-template>
