--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -121,7 +121,7 @@
                                                             (click)="companylogin(i)"
                                                             style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
 
-                                                        <mat-icon class="delete_icon ms-1" title="edit"
+                                                        <mat-icon class="detail_icons ms-1" title="edit"
                                                         [routerLink]="['/admin/company',data.ID]">edit</mat-icon>
 
                                                         <mat-icon class="delete_icon ms-1" title="Delete"
@@ -185,9 +185,10 @@
     <div class="modal-body">
         <form #f="ngForm">
               <div class="row">
-                 <div class="col-xl-6 col-12" style="overflow: auto; height: 200px;">
-                    <div class="table-responsive">
-                        <table style="width:100%;" id="exportsss"
+                 <div class="col-xl-6 col-12" >
+                    <h2 style="color: #1c1e5a;">Invoice Details </h2>
+                        <div style=" overflow: auto; height: 200px;">
+                        <table style="width:100%; " id="exportsss"
                             class="table table-striped table-hover table-sm table-bordered"
                             style="border: 2px solid #fff !important;">
                             <thead class="thead-light" style="width:100%;">
@@ -213,8 +214,9 @@
                         </table>
                     </div>
                  </div>
-                 <div class="col-xl-6 col-12" style="overflow: auto; height: 200px;">
-                    <div class="table-responsive">
+                 <div class="col-xl-6 col-12">
+                    <h2 style="color: #1c1e5a;">Barcode Details </h2>
+                    <div style=" overflow: auto; height: 200px;">
                         <table style="width:100%; " id="exportsss"
                             class="table table-striped table-hover table-sm table-bordered"
                             style="border: 2px solid #fff !important; ">
