--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -195,7 +195,7 @@
       color="primary" (click)="openModal12(content12)">Customer Debit (ReturnAmt)
     </button>
 
-    <button *ngIf="this.applyDebitPayment.PayableAmount !== 0" type="button" class="ms-1 ms-md-5" mat-raised-button
+    <button *ngIf="this.applyPayment.PayableAmount !== 0" type="button" class="ms-1 ms-md-5" mat-raised-button
       color="primary" (click)="openModal14(content14)">Customer Credit (ReturnAmt)
     </button>
 
