--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -89,19 +89,18 @@
                                                         </mat-option>
                                                     </mat-select>
                                                 </mat-form-field> -->
-                                                <form class="example-form">
                                                     <mat-form-field class="example-full-width">
                                                       <mat-label>Customer</mat-label>
                                                       <input type="text" placeholder="serach customer" aria-label="Text" matInput
-                                                             [formControl]="myControl" [matAutocomplete]="auto" 
+                                                      name="CustomerID"  [formControl]="myControl" [matAutocomplete]="auto" 
                                                              (input)="customerSearch(myControl.value, 'Name')">
-                                                      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" multi="true">
-                                                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                                                          {{option}}
+                                                      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
+                                                        <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                                                        <mat-option (click)="CustomerSelection('Value',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                                                          {{option.Name}} {{option.MobileNo1}}
                                                         </mat-option>
                                                       </mat-autocomplete>
                                                     </mat-form-field>
-                                                </form>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
